fixed dot alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -437,7 +437,7 @@ p.bold{
 
  .dot2 {
     top: 105%;
-    left: 42.3%;
+    left: 42.2%;
     width: 20px;
     height: 20px;
     animation: dot2 1.5s infinite ease-in-out;
@@ -445,7 +445,7 @@ p.bold{
 
  .dot3 {
     top: 120%;
-    left: 45.125%;
+    left: 45.2%;
     width: 15px;
     height: 15px;
     animation: dot3 1.5s infinite ease-in-out;
